# addok

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENCE  LICENSE  MANIFEST.in  Makefile  README.md  conftest.py  fabfile.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.py  zstd-train.sh
.github/workflows/: python.yml
addok/: __init__.py  autocomplete.py  batch.py  collectors.py  core.py  db.py  debug.py  ds.py  fuzzy.py  hooks.py  http.py  import_utils.py  index_utils.py  load.py  pairs.py  pipeline.py  pytest.py  pytest_plugin.py  result_processors.py  server.py  shell.py  steps.py  text_utils.py  utils.py
addok/batch/: __init__.py  bano.py  default.py  nominatim.py  psql.py  utils.py
addok/config/: __init__.py  default.py  test.py
addok/helpers/: __init__.py  addok-zstd-dict  collectors.py  formatters.py  geohash.py  index.py  keys.py  results.py  scripts.py  (+3 more)
benchmarks/: benchmark_onetomany.py
debian/: addok.default  addok.init  addok.triggers  changelog  control  dirs  install  postinst  rules
docs/: advanced.md  api.md  concepts.md  config.md  examples.md  fabric.md  faq.md  geo_boost.md  geographic_search.md  import.md  index.md  install.md  plugins.md  redis.md  shell.md  tutorial.md
fabfile/: 90.fabric.yml  __init__.py  france.fabric.yml  france.local.py  nginx.conf  uwsgi.ini
kautchu/: __init__.py  config.py  core.py  fuzzy.py  import_utils.py  server.py  utils.py
resources/: synonyms.txt
scripts/: create_edge_ngrams.py  import_bano.py
tests/: conftest.py  invalid_config.py  synonyms.txt  test.csv  test_base.py  test_batch.py  test_collectors.py  test_db_helpers.py  test_filter_by_geo_radius.py  test_geo_boost.py  test_geo_radius.py  test_geo_radius_filtering.py  test_geo_validation.py  test_geohash_helpers.py  test_http.py  test_index_utils.py  test_multiprocessing.py  test_reverse.py  test_scripts.py  test_search.py  test_search_result_processors.py  test_server.py  test_shell.py  test_text_utils.py  test_utils.py
(+21 files in other folders)
