[build-system]
requires = ["setuptools>=65.0,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "addok"
version = "1.3.1"
description = "Search engine for address. Only address."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Yohan Boniface", email = "yohan.boniface@data.gouv.fr"}
]
keywords = ["address", "openstreetmap", "geocoding"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "falcon==4.0.2",
    "hashids==1.3.1",
    "editdistance==0.8.1",
    "ngram==4.0.3",
    "progressist==0.1.0",
    "python-geohash==0.8.5",
    "redis==6.4.0",
    "unidecode==1.4.0",
    "gnureadline==8.2.13; sys_platform == 'darwin'",
]

[project.optional-dependencies]
perf = [
    "hiredis==3.3.0",
]
dev = [
    "pytest~=8.3",
    "pytest-cov~=6.1",
    "mkdocs==1.4.3",
    "build~=1.2",
    "twine==6.1.0",
    "hiredis==3.3.0",
]

[project.urls]
Homepage = "https://github.com/addok/addok"

[project.scripts]
addok = "addok.bin:main"

[project.entry-points.pytest11]
addok = "addok.pytest"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "venv*",
    "htmlcov*",
    "site*",
    "scripts*",
    "prof*",
    "debian*",
]

[tool.pytest.ini_options]
norecursedirs = ["debian"]
addopts = "-x"

[tool.coverage.run]
source = ["addok"]
omit = [
    "addok/__init__.py",
    "addok/shell.py",
    "addok/pytest.py",
    "addok/config/local*",
    "addok/bin/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
]
